<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneralActivity"
    android:background="@color/bgColor"
    android:layout_gravity="center"
    android:columnCount="6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp"
        android:text="Список дел"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/bgColor"
        android:layout_column="0"
        android:layout_row="0"
        android:textSize="24dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="13dp"
        android:background="@color/bgColor"
        android:src="@drawable/avatar"
        android:layout_column="5"
        android:layout_row="0"/>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="312dp"
        android:layout_height="72dp"
        android:layout_marginTop="69dp"
        android:background="@drawable/polucorner"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_column="0"
        android:layout_marginLeft="50dp"
        android:layout_row="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blockonemaintext"
            android:textColor="@color/white"
            android:layout_marginRight="122dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="312dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/polucorner"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_column="0"
        android:layout_marginLeft="50dp"
        android:layout_row="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blocktwomaintext"
            android:textColor="@color/white"
            android:layout_marginRight="122dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="312dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/polucorner"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_column="0"
        android:layout_marginLeft="50dp"
        android:layout_row="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blockthreemaintext"
            android:textColor="@color/white"
            android:layout_marginRight="122dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_row="4"
        android:layout_column="0"
        android:background="@drawable/alarmbuttonshape"
        android:layout_marginTop="195dp"
        android:layout_marginLeft="50dp"
        android:text="@string/generalbutton"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="72dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="@drawable/shapehalfround"
        android:layout_marginTop="30dp"
        android:layout_marginStart="65dp"
        android:layout_row="5"
        android:layout_column="0">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:src="@drawable/listbutton"
            android:background="@color/bottomGreen"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:src="@drawable/alarmbutton"
            android:background="@color/bottomGreen"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:src="@drawable/calendarbutton"
            android:background="@color/bottomGreen"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:src="@drawable/settingsbutton"
            android:background="@color/bottomGreen"/>

    </LinearLayout>

</GridLayout>