<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".AlarmActivity">

    <TableRow
        android:layout_weight="1">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginTop="25dp"
            android:text="Календарь"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avatar"
            android:layout_gravity="right|center"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="5dp"
            android:text="@string/time1"
            android:layout_marginLeft="65dp"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="5dp"
            android:text="@string/time2"
            android:layout_marginLeft="65dp"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:checked="true" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp">

        <android.support.v7.widget.AppCompatButton
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/alarmbuttonshape"
            android:textColor="@color/white"
            android:text="@string/alarmAdd" />

    </TableRow>

    <TableRow>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/ctanglepng"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:src="@drawable/listbutton"
                android:background="@color/bottomGreen"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:src="@drawable/alarmbutton"
                android:background="@color/bottomGreen"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:src="@drawable/calendarbutton"
                android:background="@color/bottomGreen"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:src="@drawable/settingsbutton"
                android:background="@color/bottomGreen"/>


        </LinearLayout>

    </TableRow>

</TableLayout>